Created third dashboard layout - I prefer this.

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,6 +102,7 @@
                         <li><a href="{{ url_for('get_food_items') }}">Home</a></li>
                         <li><a href="{{ url_for('dashboard1') }}">Dashboard 1</a></li>
                         <li><a href="{{ url_for('dashboard2') }}">Dashboard 2</a></li>
+                        <li><a href="{{ url_for('dashboard3') }}">Dashboard 3</a></li>
                         <li><a href="{{ url_for('add_food_item') }}">New Item</a></li>
                         <li><a href="{{ url_for('get_classification') }}">Food Classes</a></li>
                         <!-- <li><a href="{#{ url_for('add_category') }#}">Add Category</a></li> -->
@@ -110,6 +111,7 @@
                         <li><a href="{{ url_for('get_food_items') }}">Home</a></li>
                         <li><a href="{{ url_for('dashboard1') }}">Dashboard 1</a></li>
                         <li><a href="{{ url_for('dashboard2') }}">Dashboard 2</a></li>
+                        <li><a href="{{ url_for('dashboard3') }}">Dashboard 3</a></li>
                         <li><a href="{{ url_for('add_food_item') }}">New Item</a></li>
                         <li><a href="{{ url_for('get_classification') }}">Food Classes</a></li>
                         <!-- <li><a href="{#{ url_for('add_category') }#}">Add Category</a></li> -->
