Removed dashboards I will not use.

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,18 +100,14 @@
                     <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul id="wide-menu" class="right hide-on-med-and-down">
                         <li><a href="{{ url_for('get_food_items') }}">Home</a></li>
-                        <li><a href="{{ url_for('dashboard1') }}">Dashboard 1</a></li>
-                        <li><a href="{{ url_for('dashboard2') }}">Dashboard 2</a></li>
-                        <li><a href="{{ url_for('dashboard3') }}">Dashboard 3</a></li>
+                        <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
                         <li><a href="{{ url_for('add_food_item') }}">New Item</a></li>
                         <li><a href="{{ url_for('get_classification') }}">Food Classes</a></li>
                         <!-- <li><a href="{#{ url_for('add_category') }#}">Add Category</a></li> -->
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
                         <li><a href="{{ url_for('get_food_items') }}">Home</a></li>
-                        <li><a href="{{ url_for('dashboard1') }}">Dashboard 1</a></li>
-                        <li><a href="{{ url_for('dashboard2') }}">Dashboard 2</a></li>
-                        <li><a href="{{ url_for('dashboard3') }}">Dashboard 3</a></li>
+                        <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
                         <li><a href="{{ url_for('add_food_item') }}">New Item</a></li>
                         <li><a href="{{ url_for('get_classification') }}">Food Classes</a></li>
                         <!-- <li><a href="{#{ url_for('add_category') }#}">Add Category</a></li> -->
