--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,6 +181,15 @@ a.button-collapse i:hover {
     padding: 5px 20px;
 }
 
+.btnCancel {
+    color: #ffffff;
+    font-size: 1.2em;
+    background-color: rgb(90, 90, 90);
+    border-color: #353535;
+    border-radius: 18px;
+    padding: 3px 20px;
+}
+
 .flip3D > .front {
     background-color: #c0de87;
     -webkit-transform: perspective(1000px) rotateY(0deg);       /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
@@ -331,4 +340,22 @@ a.button-collapse i:hover {
     margin-top: 50px;
     display: inline-block;
     border: 1px solid black;
+}
+
+h2.warning {
+    color: red;
+    text-shadow: 0px 0px 10px #bcff04;
+    text-align: center;
+}
+p.redwarning {
+    color:red;
+    font-size: 1.2em;
+    background-color: rgb(0, 255, 242);
+    text-align: center;
+}
+p.wayout {
+    color:rgb(1, 73, 1);
+    font-size: 1.2em;
+    background-color: rgb(205, 165, 226);
+    text-align: center;
 }
