--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,8 @@
                                         <div class="btnGroup1">
                                             <a href="{{ url_for('edit_food_item', food_item_id=foodItem._id) }}" >
                                             <button class="btnEdit onclick=""><strong>Edit</strong></button></a>
-                                            <a href="{{ url_for('delete_food_item', food_item_id=foodItem._id) }}" >
+                                            <!-- <a href="{#{ url_for('delete_food_item', food_item_id=foodItem._id) }#}" > -->
+                                            <a href="{{ url_for('confirm_delete_food_item', food_item_id=foodItem._id) }}" >
                                             <button class="btnDelete" onclick=""><strong>Delete</strong></button></a>
                                         </div>
                                         <div class="btnGroup2">
