--- a/templates/confirmdeletefooditem.html
+++ b/templates/confirmdeletefooditem.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-    <h2 class="warning">Deleting <strong>{{ foodItem.name }} | {{ foodItem.brand }}</strong></h2>
+    <h2 class="warning">Deleting Food Item: <strong>{{ foodItem.name }} | {{ foodItem.brand }}</strong></h2>
 
     <div class="row">
         <div class="col col-xs-4 col-sm-3">
