Grey out disabled delete links for classes.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,10 @@
     display: none;
 }
 
+.disabled {
+    color: grey;
+}
+
 .body {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
