--- a/templates/classification.html
+++ b/templates/classification.html
@@ -33,7 +33,7 @@
                                             <i class="material-icons prefix classList">clear</i>
                                             <a href="{{ url_for('confirm_delete_class', class_id=class._id) }}" >Delete </a>
                                         {% else %}
-                                            <i class="material-icons prefix classList">clear</i> Delete
+                                            <i class="material-icons prefix classList">clear</i><span class="disabled"> Delete</span>
                                         {% endif %}
 
 
